<resources>
    <string name="app_name">LOVE HOME</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_choose">选择</string>

    <string name="tv_loading">正加载,请稍后...</string>
    <string name="loading">正在处理...</string>
    <string name="save_pic">保存</string>
    <string name="share">分享</string>
    <string name="copy_url">复制链接</string>
    <string name="download_again">重新下载</string>


    <string name="home_tip">关注一些人,看看有什么惊喜</string>
    <string name="go_follow">去关注</string>
    <string name="regist_location">中国</string>
    <string name="regist_input_hint_text">请输入手机号</string>
    <string name="regist_text">注册</string>
    <string name="login_text">登陆</string>
    <string name="tabbar_message">消息</string>
    <string name="tabbar_home">首页</string>
    <string name="tabbar_find">发现</string>
    <string name="tabbar_me">我</string>
    <string name="tabbar_addfriend">添加好友</string>
    <string name="empty_message_text">登陆后，别人评论你的微博，给你发消息，都会在这里收到通知</string>
    <string name="empty_me_text">登陆后，你的微博、相册、个人资料会显示在这里，展示给他人</string>
    <string name="follow_text">关注</string>
    <string name="follow_who_text">快看看大家都在关注谁</string>
    <string name="login_input_account_hint_text">邮箱/手机号</string>
    <string name="login_input_password_hint_text">请输入密码</string>
    <string name="login_forgetpwd_text">忘记密码</string>
    <string name="login_bynopwd_text">无密码登录</string>
    <string name="login_byqq_text">QQ 登录</string>
    <string name="login_byregist_text">注册账号</string>
    <string name="defulat_username">注册账号</string>
    <string name="defulat_usertip">注册账号</string>
    <string name="add_friends">添加好友</string>
    <string name="setting">设置</string>
    <string name="me">我</string>
    <string name="weibo">微博</string>
    <string name="fans">粉丝</string>
    <string name="follow">关注</string>
    <string name="new_friend">新的好友</string>
    <string name="weibo_level">微博等级</string>
    <string name="my_photo">我的相册</string>
    <string name="my_dainping">我的点评</string>
    <string name="my_zan">我的赞</string>
    <string name="weibo_pay">微博支付</string>
    <string name="weibo_sport">微博运动</string>
    <string name="fans_top">粉丝头条</string>
    <string name="fans_service">粉丝服务</string>
    <string name="draft_box">草稿箱</string>
    <string name="more">更多</string>
    <string name="vip">会员</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_day">日间模式</string>
    <string name="setting_hotweibo">微博热点</string>
    <string name="setting_account_manager">账号管理</string>
    <string name="setting_account_security">账号安全</string>
    <string name="setting_notice">通知</string>
    <string name="setting_privacy">隐私</string>
    <string name="setting_common">通用设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_aboutweibo">关于微博</string>
    <string name="setting_exitweibo">退出微博</string>
    <string name="setting_clearcache">清楚缓存</string>
    <string name="at_me_text">\u0040我的</string>
    <string name="comment_text">评论</string>
    <string name="like_text">咱</string>
    <string name="find_group_text">发现群</string>


    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="The_recording_time_is_too_short">The recording time is too short</string>
    <string name="send_failure_please">Send failure, please test whether the server connection</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hardware_not_support">Hardware not Support</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_enroll">No Fingerprint Enroll</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="use_password">Use password</string>
    <string-array name="message_dialogs">
        <item>置顶记录</item>
        <item>删除记录</item>
        <item>标为已读</item>
        <item>标为未读</item>
    </string-array>
</resources>
