<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defult_color"
    android:orientation="vertical">

    <include layout="@layout/include_app_title" />

    <com.wsg.lovehome.mifliing.FlingLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_night" />

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/sb_style"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        app:kswBackDrawable="@drawable/miui_back_drawable"
                        app:kswBackMeasureRatio="2"
                        app:kswThumbDrawable="@drawable/miui_thumb_drawable"
                        app:kswThumbHeight="18dp"
                        app:kswThumbWidth="18dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/view_defulte_color">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_hotweibo" />

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/sb_custom_miui"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        app:kswBackDrawable="@drawable/miui_back_drawable"
                        app:kswBackMeasureRatio="2"
                        app:kswThumbDrawable="@drawable/miui_thumb_drawable"
                        app:kswThumbHeight="18dp"
                        app:kswThumbWidth="18dp" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/normal_item_style"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_account_manager" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_account_security" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/normal_item_style"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_notice" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_privacy" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_common" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/normal_item_style"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_hotweibo" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_feedback" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_aboutweibo" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/darkgrey" />

                <RelativeLayout style="@style/normal_item_style">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/setting_clearcache" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/triangle" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </com.wsg.lovehome.mifliing.FlingLayout>
</LinearLayout>